# b2-admin

./: .gitignore  README.md
b2-admin/: Cargo.toml  README.md  b2-admin.http  b2-admin.toml.example
b2-admin/src/: asset.rs  cfg.rs  err.rs  jwt.rs  lib.rs  main.rs  resp.rs  state.rs
b2-admin/src/b2/: b2.rs  mod.rs  share.rs
b2-admin/src/handler/: auth.rs  b2.rs  b2_list.rs  captcha.rs  cfg.rs  download.rs  mod.rs  upload.rs
b2-admin/src/init/: log.rs  router.rs
b2-admin/src/job/: clean.rs  mkdir.rs  mod.rs  web.rs
b2-admin/src/mw/: auth.rs  get_b2.rs  ip_ua.rs  mod.rs
b2-admin/src/payload/: auth.rs  b2.rs  mod.rs
b2-admin/src/util/: mod.rs  sha256.rs
b2-admin/ui/: index.html
b2-admin/ui/assets/: Confirm-BanNv1Ot.js  Confirm-Bev2pMTh.js  Confirm-BgcOXd70.js  Confirm-BjdZ6y_n.js  DialogAlert-ByjwRO8n.js  DialogAlert-Ci-bcoG_.js  DialogAlert-DLTNaf9V.js  DialogAlert-_eItyJmd.js  DirPage-2QRNYJdQ.js  DirPage-CJpEIiKp.js  DirPage-CrY07rVZ.js  DirPage-DNPUOhg5.js  Download-BhzJv0UW.js  Download-CNOl-w7t.js  Download-CXCg_f_V.js  Download-CcAcKwRi.js  Layout-B_3cInWb.js  Layout-DBkGfUGU.js  Layout-KD-jOT_a.js  Layout-iAOpeOFo.js  LoginPage-BAIIL2bN.js  LoginPage-ByGKkQBJ.js  LoginPage-DXnruRz9.js  LoginPage-Da5nS0T3.js  ModeToggle-B4GlYq4D.js  ModeToggle-C-Cf6JhI.js  ModeToggle-CJgE29h9.js  ModeToggle-Dc71qB9M.js  PreviewDialog-C9I9w-4g.js  PreviewDialog-Cp9_YNYK.js  PreviewDialog-D0oLcgom.js  PreviewDialog-DNyDQZ2w.js  check-Dy6ZETv4.js  index-B0dcevKm.js  index-B_dxWLcO.css  index-CvrJ4SFh.js  index-DC5ri7zk.css  index-DSwZk1w2.js  index-j_Jj3SGC.css  (+13 more)
(+37 files in other folders)
